# SNU-AI-Challenge_Ver11

./: .gitignore  CLAUDE.md  README.md  VER11.md  data_download.py  flat.py  get_eta.py  pyproject.toml  requirements-gpu.txt  requirements.txt  run_common.py  run_fit.py  run_pre.py
docs/: Ver11_발표자료_2026-07-24.pptx  Ver11_진행보고_2026-07-22.pptx  fitprune_fix_2026-07-16.md  idea_execution_plan_2026-07-21.md  motion_prune_implementation_plan_2026-07-22.md  oom_root_cause_2026-07-24.md  postmortem_2026-07-21_a100_and_plan.md  report_source_2026-07-24.md  session_2026-07-22_motion_run.md  weekly_report_2026-07-24.md
grade/: grade.py  results_8b_bf16.md  submission-0710-1_0.45724.csv  submission-0711-1_0.82373.csv  submission-0712-1_0.85863.csv  submission-0712-2_0.86561.csv  submission-0713-2.csv  submission-0713-3_0.83420.csv  submission-0714-1.csv  submission-0714-2.csv  submission-ver10-ckpt20_0.75741.csv  submission-ver11-ckpt1000.csv  submission-ver11-ckpt2000.csv  submission-ver4-ckpt1600_0.90226.csv  submission-ver4-ckpt2000_0.89354.csv  submission-ver8-BF16-ckpt1000.csv  submission-ver8-BF16-ckpt1200.csv  submission-ver8-BF16-ckpt1400.csv  submission-ver8-BF16-ckpt1600.csv  submission-ver8-BF16-ckpt1800.csv  submission-ver8-BF16-ckpt200.csv  submission-ver8-BF16-ckpt2000.csv  submission-ver8-BF16-ckpt400.csv  submission-ver8-BF16-ckpt600.csv  submission-ver8-BF16-ckpt800.csv  submission-ver8-champ-tta8-balanced_0.93019.csv  submission-ver8-ckpt1600_0.90226.csv  submission-ver8-diagswap.csv  submission-ver8-dpo-ckpt1000.csv  submission-ver8-dpo-ckpt400.csv  (+20 more)
(+122 files in other folders)
